[package]
name = "rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = {version="1.0.164", features=["std", "derive"]}
crossterm = "0.26.1"
glob = "0.3.1"
notify-rust = "4.8.0"
paste = "1.0.12"
postgres = "*"
sysinfo = "0.28.4"
tokio = "1.26.0"
tui = "0.19.0"

